pkg/front_end/testcases/general/patch_extends_implements/main.dart.weak.modular.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/general/patch_extends_implements/main.dart:8:7: Error: The class 'Class1a' is abstract and can't be instantiated.
//   new Class1a();
//       ^^^^^^^
//
// pkg/front_end/testcases/general/patch_extends_implements/main.dart:11:24: Error: A value of type 'Class2b' can't be assigned to a variable of type 'SuperClass'.
//  - 'Class2b' is from 'dart:test'.
//  - 'SuperClass' is from 'dart:test'.
//   SuperClass c2b = new Class2b();
//                        ^
//
// pkg/front_end/testcases/general/patch_extends_implements/main.dart:13:23: Error: A value of type 'Class3b' can't be assigned to a variable of type 'Interface'.
//  - 'Class3b' is from 'dart:test'.
//  - 'Interface' is from 'dart:test'.
//   Interface c3b = new Class3b();
//                       ^
//
// pkg/front_end/testcases/general/patch_extends_implements/main.dart:15:19: Error: A value of type 'Class4b' can't be assigned to a variable of type 'Mixin'.
//  - 'Class4b' is from 'dart:test'.
//  - 'Mixin' is from 'dart:test'.
//   Mixin c4b = new Class4b();
//                   ^
//
import self as self;
import "dart:test" as test;

import "dart:test";

static method test() → dynamic {
  invalid-expression "The class 'Class1a' is abstract and can't be instantiated.";
  new test::Class1b::•();
  test::SuperClass c2a = new test::Class2a::•();
  test::SuperClass c2b = invalid-expression "pkg/front_end/testcases/general/patch_extends_implements/main.dart:11:24: Error: A value of type 'Class2b' can't be assigned to a variable of type 'SuperClass'.
 - 'Class2b' is from 'dart:test'.
 - 'SuperClass' is from 'dart:test'.
  SuperClass c2b = new Class2b();
                       ^" in new test::Class2b::•() as{TypeError} test::SuperClass;
  test::Interface c3a = new test::Class3a::•();
  test::Interface c3b = invalid-expression "pkg/front_end/testcases/general/patch_extends_implements/main.dart:13:23: Error: A value of type 'Class3b' can't be assigned to a variable of type 'Interface'.
 - 'Class3b' is from 'dart:test'.
 - 'Interface' is from 'dart:test'.
  Interface c3b = new Class3b();
                      ^" in new test::Class3b::•() as{TypeError} test::Interface;
  test::Mixin c4a = new test::Class4a::•();
  test::Mixin c4b = invalid-expression "pkg/front_end/testcases/general/patch_extends_implements/main.dart:15:19: Error: A value of type 'Class4b' can't be assigned to a variable of type 'Mixin'.
 - 'Class4b' is from 'dart:test'.
 - 'Mixin' is from 'dart:test'.
  Mixin c4b = new Class4b();
                  ^" in new test::Class4b::•() as{TypeError} test::Mixin;
}

library;
//
// Problems in library:
//
// pkg/front_end/testcases/general/patch_extends_implements/patch_lib.dart:44:23: Error: The constructor function type 'Class5bImpl Function()' isn't a subtype of 'Class5b Function()'.
//  - 'Class5bImpl' is from 'dart:test'.
//  - 'Class5b' is from 'dart:test'.
//   factory Class5b() = Class5bImpl;
//                       ^
//
// pkg/front_end/testcases/general/patch_extends_implements/patch_lib.dart:53:23: Error: The constructor function type 'Class5cImpl Function()' isn't a subtype of 'Class5c Function()'.
//  - 'Class5cImpl' is from 'dart:test'.
//  - 'Class5c' is from 'dart:test'.
//   factory Class5c() = Class5cImpl;
//                       ^
//
// pkg/front_end/testcases/general/patch_extends_implements/patch_lib.dart:62:41: Error: The constructor function type '_Class6aImpl<T> Function(void Function(T))' isn't a subtype of 'Class6a<T> Function(void Function(T))'.
//  - '_Class6aImpl' is from 'dart:test'.
//  - 'Class6a' is from 'dart:test'.
//   factory Class6a(void Function(T) f) = _Class6aImpl<T>;
//                                         ^
//
// pkg/front_end/testcases/general/patch_extends_implements/patch_lib.dart:82:41: Error: The constructor function type '_Class6cImpl<T> Function(void Function(T))' isn't a subtype of 'Class6c<T> Function(void Function(T))'.
//  - '_Class6cImpl' is from 'dart:test'.
//  - 'Class6c' is from 'dart:test'.
//   factory Class6c(void Function(T) f) = _Class6cImpl<T>;
//                                         ^
//
import self as test;
import "dart:core" as core;
import "dart:_internal" as _in;

import "dart:_internal";

abstract class _Class4b&Object&Mixin = core::Object with test::Mixin /*isAnonymousMixin,hasConstConstructor*/  { // from org-dartlang-testcase:///patch_lib.dart
  const synthetic constructor •() → test::_Class4b&Object&Mixin
    : super core::Object::•()
    ;
}
class _Class6aImpl<T extends core::Object? = dynamic> extends core::Object { // from org-dartlang-testcase:///patch_lib.dart
  constructor •((test::_Class6aImpl::T%) → void f) → test::_Class6aImpl<test::_Class6aImpl::T%>
    : super core::Object::•()
    ;
}
class _Class6bImpl<T extends core::Object? = dynamic> extends core::Object implements test::Class6b<test::_Class6bImpl::T%> { // from org-dartlang-testcase:///patch_lib.dart
  constructor •((test::_Class6bImpl::T%) → void f) → test::_Class6bImpl<test::_Class6bImpl::T%>
    : super core::Object::•()
    ;
}
class _Class6cImpl<T extends core::Object? = dynamic> extends core::Object { // from org-dartlang-testcase:///patch_lib.dart
  constructor •((test::_Class6cImpl::T%) → void f) → test::_Class6cImpl<test::_Class6cImpl::T%>
    : super core::Object::•()
    ;
}
abstract class Interface extends core::Object {
  synthetic constructor •() → test::Interface
    : super core::Object::•()
    ;
}
abstract class Mixin extends core::Object /*isMixinDeclaration*/  {
}
class SuperClass extends core::Object {
  synthetic constructor •() → test::SuperClass
    : super core::Object::•()
    ;
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
abstract class Class1a extends core::Object {
  synthetic constructor •() → test::Class1a
    : super core::Object::•()
    ;
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class1b extends core::Object {
  synthetic constructor •() → test::Class1b
    : super core::Object::•()
    ;
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class2a extends test::SuperClass {
  synthetic constructor •() → test::Class2a
    : super test::SuperClass::•()
    ;
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class2b extends core::Object {
  synthetic constructor •() → test::Class2b
    : super core::Object::•()
    ;
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class3a extends core::Object implements test::Interface {
  synthetic constructor •() → test::Class3a
    : super core::Object::•()
    ;
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class3b extends core::Object {
  synthetic constructor •() → test::Class3b
    : super core::Object::•()
    ;
}
abstract class _Class4a&Object&Mixin = core::Object with test::Mixin /*isAnonymousMixin,hasConstConstructor*/  {
  const synthetic constructor •() → test::_Class4a&Object&Mixin
    : super core::Object::•()
    ;
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class4a extends test::_Class4a&Object&Mixin {
  synthetic constructor •() → test::Class4a
    : super test::_Class4a&Object&Mixin::•()
    ;
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class4b extends core::Object {
  synthetic constructor •() → test::Class4b
    : super core::Object::•()
    ;
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class5a extends core::Object {
  @#C1
  static factory /* from org-dartlang-testcase:///patch_lib.dart */ •() → test::Class5a /* redirection-target: test::Class5aImpl::• */
    return new test::Class5aImpl::•();
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class5aImpl extends core::Object implements test::Class5a {
  synthetic constructor •() → test::Class5aImpl
    : super core::Object::•()
    ;
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class5b extends core::Object {
  @#C1
  static factory /* from org-dartlang-testcase:///patch_lib.dart */ •() → test::Class5b /* redirection-target: test::Class5bImpl::• */
    return invalid-expression "pkg/front_end/testcases/general/patch_extends_implements/patch_lib.dart:44:23: Error: The constructor function type 'Class5bImpl Function()' isn't a subtype of 'Class5b Function()'.
 - 'Class5bImpl' is from 'dart:test'.
 - 'Class5b' is from 'dart:test'.
  factory Class5b() = Class5bImpl;
                      ^";
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class5bImpl extends core::Object {
  synthetic constructor •() → test::Class5bImpl
    : super core::Object::•()
    ;
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class5c extends core::Object {
  @#C1
  static factory /* from org-dartlang-testcase:///patch_lib.dart */ •() → test::Class5c /* redirection-target: test::Class5cImpl::• */
    return invalid-expression "pkg/front_end/testcases/general/patch_extends_implements/patch_lib.dart:53:23: Error: The constructor function type 'Class5cImpl Function()' isn't a subtype of 'Class5c Function()'.
 - 'Class5cImpl' is from 'dart:test'.
 - 'Class5c' is from 'dart:test'.
  factory Class5c() = Class5cImpl;
                      ^";
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class5cImpl extends core::Object {
  synthetic constructor •() → test::Class5cImpl
    : super core::Object::•()
    ;
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class6a<T extends core::Object? = dynamic> extends core::Object {
  @#C1
  static factory /* from org-dartlang-testcase:///patch_lib.dart */ •<T extends core::Object? = dynamic>((test::Class6a::•::T%) → void f) → test::Class6a<test::Class6a::•::T%> /* redirection-target: test::_Class6aImpl::•<test::Class6a::•::T%>*/
    return invalid-expression "pkg/front_end/testcases/general/patch_extends_implements/patch_lib.dart:62:41: Error: The constructor function type '_Class6aImpl<T> Function(void Function(T))' isn't a subtype of 'Class6a<T> Function(void Function(T))'.
 - '_Class6aImpl' is from 'dart:test'.
 - 'Class6a' is from 'dart:test'.
  factory Class6a(void Function(T) f) = _Class6aImpl<T>;
                                        ^";
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class6b<T extends core::Object? = dynamic> extends core::Object {
  @#C1
  static factory /* from org-dartlang-testcase:///patch_lib.dart */ •<T extends core::Object? = dynamic>((test::Class6b::•::T%) → void f) → test::Class6b<test::Class6b::•::T%> /* redirection-target: test::_Class6bImpl::•<test::Class6b::•::T%>*/
    return new test::_Class6bImpl::•<test::Class6b::•::T%>(f);
}
@/* from org-dartlang-testcase:///patch_lib.dart */ #C1
class Class6c<T extends core::Object? = dynamic> extends core::Object {
  @#C1
  static factory /* from org-dartlang-testcase:///patch_lib.dart */ •<T extends core::Object? = dynamic>((test::Class6c::•::T%) → void f) → test::Class6c<test::Class6c::•::T%> /* redirection-target: test::_Class6cImpl::•<test::Class6c::•::T%>*/
    return invalid-expression "pkg/front_end/testcases/general/patch_extends_implements/patch_lib.dart:82:41: Error: The constructor function type '_Class6cImpl<T> Function(void Function(T))' isn't a subtype of 'Class6c<T> Function(void Function(T))'.
 - '_Class6cImpl' is from 'dart:test'.
 - 'Class6c' is from 'dart:test'.
  factory Class6c(void Function(T) f) = _Class6cImpl<T>;
                                        ^";
}

constants  {
  #C1 = _in::_Patch {}
}
